--- a/auctionintro.html
+++ b/auctionintro.html
@@ -67,6 +67,13 @@
           </td>
           <td>ladies only!</td>
         </tr>
+		<tr>
+          <td>laura</td>
+          <td>
+            
+          </td>
+          <td>all bidders welcome!</td>
+        </tr>		
       </table>
     </div>
   </body>
