--- a/auctionintro.html
+++ b/auctionintro.html
@@ -47,7 +47,7 @@
   <body>
     <div class="auctionEntries" align="center" bgcolor="red" height="300">
       <h1>Participants</h1>
-      <table class="center" style="background-color:#FF00F7">
+      <table class="center" style="background-color:#ad3626">
         <tr>
           <th>Name</th>
           <th>AV</th>
