--- a/auctionresults.html
+++ b/auctionresults.html
@@ -54,69 +54,104 @@
         </tr>
 		<tr>
           <td>#363</td>
-          <td>TBD</td>
+          <td>-Grey-</td>
         </tr>
 		<tr>
           <td>Amanda Beth</td>
-          <td>TBD</td>
-        </tr>
+          <td>darcy {Ms. Tia}</td>
+        </tr>	
 		<tr>
-          <td>Artemis</td>
-          <td>TBD</td>
-        </tr>		
+          <td>Amy37</td>
+          <td>Amanda Beth</td>
+        </tr>	
 		<tr>
           <td>anonymous entry 1</td>
-          <td>TBD</td>
+          <td>Kendall Jayne</td>
         </tr>		
 		<tr>
           <td>anonymous entry 2</td>
-          <td>TBD</td>
+          <td>Shelley</td>
         </tr>	
 		<tr>
           <td>asha</td>
-          <td>TBD</td>
+          <td>Naked G</td>
+        </tr>			
+		<tr>
+          <td>BD</td>
+          <td>tbd</td>
         </tr>			
 		<tr>
           <td>Becky & Cosette</td>
-          <td>TBD</td>
+          <td>Clarissa {Bethany Rose}</td>
         </tr>	
         <tr>
           <td>catherine</td>
-          <td>TBD</td>
+          <td>Clarissa {Bethany Rose}/td>
         </tr>	
 		<tr>
-          <td>Clarissa</td>
-          <td>TBD</td>
+          <td>Clarissa + Bethany Rose</td>
+          <td>Maria</td>
         </tr>
         <tr>
           <td>Clary</td>
-          <td>TBD</td>
+          <td>asha</td>
         </tr>
 		<tr>
           <td>Courtney</td>
-          <td>TBD</td>
+          <td>Clary</td>
         </tr>			
         <tr>
           <td>cyn</td>
-          <td>TBD</td>
+          <td>Clarissa {Bethany Rose}</td>
+        </tr>	
+        <tr>
+          <td>emily</td>
+          <td>Sebastian</td>
+        </tr>			
+		<tr>
+          <td>Kendall Jayne</td>
+          <td>Kendra</td>
         </tr>		
 		<tr>
           <td>Kendra</td>
-          <td>TBD</td>
+          <td>asha</td>
         </tr>
 		<tr>
           <td>laura</td>
-          <td>TBD</td>
+          <td>Kendall Jayne</td>
+        </tr>			
+		<tr>
+          <td>Lucinda</td>
+          <td>Clary</td>
         </tr>	
 		<tr>
+          <td>Maria</td>
+          <td>bethany</td>
+        </tr>		
+		<tr>
+          <td>Olivia</td>
+          <td>wolfie</td>
+        </tr>			
+		<tr>
+          <td>sara 24</td>
+          <td>plainjane</td>
+        </tr>		
+		<tr>
           <td>Sara.</td>
-          <td>TBD</td>
+          <td>plainjane</td>
         </tr>			
         <tr>
           <td>Shelley</td>
-          <td>TBD</td>
+          <td>bethany</td>
         </tr>
-	
+		<tr>
+          <td>tainted succubus</td>
+          <td>Clary</td>
+        </tr>	
+		<tr>
+          <td>Viktor</td>
+          <td>juju</td>
+        </tr>	
 	
 		
       </table>
