--- a/auctionresults.html
+++ b/auctionresults.html
@@ -78,7 +78,7 @@
         </tr>			
 		<tr>
           <td>BD</td>
-          <td>tbd</td>
+          <td>laura</td>
         </tr>			
 		<tr>
           <td>Becky & Cosette</td>
